--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div id="app"></div>
     еееееyyy
+    <div class="box_for_animation"></div>
+    <button class="button_for_animation">Start animation</button>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
